--- a/File2.html
+++ b/File2.html
@@ -7,7 +7,8 @@
     <script type="text/JavaScript">
 
         var name = prompt("please enter ur name");
-        document.write("<h1> hello</h1>" + name);
+        document.write("<h1> hello hiiiiiiii</h1>" + name);
+        <h5>Panel level</h5>
 
     </script>
 
